Small fix. On author profile page. Where the new buttons overlap.

--- a/webapp/src/components/article/style.css
+++ b/webapp/src/components/article/style.css
@@ -218,7 +218,7 @@ padding: 5px;
     width: 450px;
     height: 300px;
      /* flex-wrap: nowrap; */
-    transition: width .6s, height .6s, filter .35s, transform .6s;
+    transition: filter .35s, transform .5s;
     /* transition-delay: .15s;  */
     transform: scale(1); 
 
@@ -227,10 +227,8 @@ padding: 5px;
 .favCard:hover{
     background: rgb(167,230,255);
     filter: saturate(2.0);
-    transition: width .3s, height .3s, opacity .5s, filter 1.2s, transform .7s;
-    transform: scale(1.05); 
-  
-
+    transition: filter 1.2s, transform .65s;
+    transform: scale(1.07); 
 }
 .favCard img{
     width: 200px;
@@ -426,7 +424,7 @@ padding: 5px;
     padding-left: 52vw;
     max-height: 50px;
     max-width: 50px; 
-    margin-bottom: -10px;
+    margin-bottom: -16px;
     display: flex;
     justify-content: center;
     flex-direction: row;
