--- a/webapp/src/pages/author/style.css
+++ b/webapp/src/pages/author/style.css
@@ -1,3 +1,10 @@
+.patchWorkAuthorCreateOffset{
+    margin-right: 350px;
+
+
+}
+
+
 .userProf{
     /* background-color: rgb(57, 231, 86); */    
     max-width: 100%;
