--- a/webapp/src/pages/editor/style.css
+++ b/webapp/src/pages/editor/style.css
@@ -49,7 +49,7 @@ left: -2%;
     margin-right: auto;
     margin-left: auto;
     border-radius: 15px;
-    background-color: rgb(224, 234, 238) ;
+    background-color: rgb(167, 230, 255) ;
     padding: 20px;
     width: 80em;
     display: flex;
@@ -63,27 +63,22 @@ left: -2%;
     width: 450px;
     height: 300px;
      /* flex-wrap: nowrap; */
-    transition: width .6s, height .6s, filter .35s;
+    transition: filter .35s, transform .5s;
     /* transition-delay: .15s;  */
-
+    transform: scale(1); 
 
 }
 
 .favCard:hover{
-    /* The size is nice. Unsure how to set the size. */
     background: rgb(167,230,255);
-    /* background: radial-gradient(circle, rgba(167,230,255,1) 69%, rgba(225,238,193,1) 100%); */
-    /* opacity: .85; */
     filter: saturate(2.0);
-     /* width: 451px;
-    height: 302px; */
-    transition: width .3s, height .3s, opacity .5s, filter 1.2s; 
+    transition: filter 1.2s, transform .65s;
+    transform: scale(1.06); 
 
 }
 .favCard:hover img{
     width: 200px;
     height:200px;
-    transition: width .3s, height .3s;
 }
 
 
